syntax = "proto3";
package pictophone.v1_0;

import "google/protobuf/any.proto";

service Pictophone {
    rpc CreateGame (CreateGameRequest) returns (Empty);
    rpc DeleteGame (DeleteGameRequest) returns (Empty);
}

message CreateGameRequest {
    string game_id = 1;
    string short_code = 2;
}

message DeleteGameRequest {
    string game_id = 1;
}

message Empty {}
